fixed broken stylesheet URLS

--- a/codex-client/src/components/styles/details.css
+++ b/codex-client/src/components/styles/details.css
@@ -1,6 +1,7 @@
 .details-div {
     padding: 1em;
     margin: 0.5em;
+    background-color: white;
 }
 
 .details-h2 {
